fix: overflow

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -13,8 +13,6 @@ html {
 body {
   color: $text-color;
   width: auto;
-  height: 100%;
-  min-height: 100%;
   margin: 0;
   background-color: $backgroundColor;
 }
